# codecrafters-shell-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: builtins.rs  command.rs  executor.rs  lib.rs  main.rs  parser.rs  prompt.rs  utils.rs
