[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = "1.0"                                # error handling
bytes = "1.3"                                 # helps manage buffers
thiserror = "2.0"                             # error handling
